@startuml

title __MODEL's Class Diagram__\n

  namespace orchestrator {
    namespace handler {
      namespace email {
        namespace model {
          class orchestrator.handler.email.model.EmailHandlerRequest {
              - Company : String
              - Drivers : String
              - Flow : String
              - Price : String
              + EmailHandlerRequest()
              + equals()
              + getCompany()
              + getDrivers()
              + getFlow()
              + getPrice()
              + getService()
              + hashCode()
              + setCompany()
              + setDrivers()
              + setFlow()
              + setPrice()
              + setService()
              + toString()
              # canEqual()
          }
        }
      }
    }
  }
  

  namespace orchestrator {
    namespace handler {
      namespace email {
        namespace model {
          class orchestrator.handler.email.model.EmailHandlerResponse {
              - text : String
              + EmailHandlerResponse()
              + equals()
              + getText()
              + hashCode()
              + setText()
              + toString()
              # canEqual()
          }
        }
      }
    }
  }
  

  orchestrator.handler.email.model.EmailHandlerRequest -up-|> orchestrator.handler.HandlerRequest
  orchestrator.handler.email.model.EmailHandlerRequest o-- orchestrator.model.Service : Service
  orchestrator.handler.email.model.EmailHandlerResponse -up-|> orchestrator.handler.HandlerResponse


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
